# sonel-mapping

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  sonel-mapping.sln
common/gdt/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GPU_Development_Tools.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  gdt.vcxproj  gdt.vcxproj.filters
common/glfWindow/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfWindow.vcxproj  glfWindow.vcxproj.filters
models/: box4x4_obstructed.mtl
sonel-mapping/: CMakeLists.txt  CUDABuffer.h  Camera.h  CameraFrame.cpp  CameraFrame.h  CameraFrameManip.cpp  CameraFrameManip.h  CudaHelper.h  CudaRandom.h  CudaSonelMapper.cu  CudaSonelMapperParams.h  CudaSonelVisualizer.cu  CudaVector.h  FlyModeManip.cpp  FlyModeManip.h  GlfCameraWindow.cpp  GlfCameraWindow.h  GlfWindow.cpp  GlfWindow.h  GridMap.cpp  GridMap.h  INSTALL.vcxproj  INSTALL.vcxproj.filters  InspectModeManip.h  LaunchParams.h  MainWindow.cpp  MainWindow.h  Model.cpp  Model.h  OctTree.h  OptixScene.cpp  OptixScene.h  OptixSetup.cpp  OptixSetup.h  Sonel.cpp  Sonel.h  SonelManager.cpp  SonelManager.h  SonelMap.h  SonelMapVisualizer.cpp  (+15 more)
sonel-mapping/Cuda/: CudaBounceType.h  CudaBuffer.h  CudaDeviceHelper.h  CudaHelper.h  CudaRandom.h  CudaSceneSettings.h  CudaSonelMapper.cu  CudaSonelMapperParams.h  CudaSonelReceiver.cu  CudaSonelReceiverHelper.h  CudaSonelVisualizer.cu
sonel-mapping/SonelMapping/: OptixScene.cpp  OptixScene.h  OptixSetup.cpp  OptixSetup.h  SmOptixProgram.h  SonelManager.cpp  SonelManager.h  SonelMapReceiver.cpp  SonelMapReceiver.h  SonelMapVisualizer.cpp  SonelMapVisualizer.h  SonelMapper.cpp  SonelMapper.h  SonelVisibilityFlags.h
sonel-mapping/SonelMapping/Models/: AabbItem.h  AbsorptionData.h  GatherEntry.h  LaunchParams.h  SimpelSoundSource.h  SimulationData.h  SmSbtData.h  Sonel.h  SonelMap.h  SonelReceiverParams.h  SonelVisualizerParams.h  SoundFrequency.h  SoundSource.h
sonel-mapping/UI/: CameraFrame.h  CameraFrameManip.cpp  FlyModeManip.h  GlfWindow.cpp  GlfWindow.h  InspectModeManip.cpp  InspectModeManip.h  MainWindow.cpp  MainWindow.h
